{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 345,
  "lineage": "2f745e74-9797-0e55-0704-001e5498159f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:security-group/sg-0e54e921eac9663b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e54e921eac9663b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.7.1.0/24",
                  "10.7.2.0/24",
                  "10.7.3.0/24",
                  "10.7.11.0/24",
                  "10.7.12.0/24",
                  "10.7.13.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.7.1.0/24",
                  "10.7.2.0/24",
                  "10.7.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-aws-three-tier-app-sg",
            "name_prefix": null,
            "owner_id": "894541307925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Group": "terraform-aws-three-tier",
              "Nmae": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:security-group/sg-0b06590c4985d362c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b06590c4985d362c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.7.1.0/24",
                  "10.7.2.0/24",
                  "10.7.3.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-aws-three-tier-elb-app-sg",
            "name_prefix": null,
            "owner_id": "894541307925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Group": "terraform-aws-three-tier",
              "Name": "app-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:security-group/sg-056c5de2b925f9153",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056c5de2b925f9153",
            "ingress": [
              {
                "cidr_blocks": [
                  "39.109.189.92/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-aws-three-tier-elb-web-sg",
            "name_prefix": null,
            "owner_id": "894541307925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Group": "terraform-aws-three-tier",
              "Name": "web-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:security-group/sg-07694557676063459",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07694557676063459",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.7.11.0/24",
                  "10.7.12.0/24",
                  "10.7.13.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-aws-three-tier-rds-sg",
            "name_prefix": null,
            "owner_id": "894541307925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Group": "terraform-aws-three-tier",
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:security-group/sg-0ef6a76f0fc00b5fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ef6a76f0fc00b5fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.7.1.0/24",
                  "10.7.2.0/24",
                  "10.7.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.7.1.0/24",
                  "10.7.2.0/24",
                  "10.7.3.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-aws-three-tier-web-sg",
            "name_prefix": null,
            "owner_id": "894541307925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Group": "terraform-aws-three-tier",
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb_app.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:894541307925:loadbalancer/terraform-aws-three-tier-elb-app",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "internal-terraform-aws-three-tier-elb-app-870792147.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 20,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-aws-three-tier-elb-app",
            "idle_timeout": 60,
            "internal": true,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "TCP",
                "lb_port": 8080,
                "lb_protocol": "TCP"
              }
            ],
            "name": "terraform-aws-three-tier-elb-app",
            "security_groups": [
              "sg-0b06590c4985d362c"
            ],
            "source_security_group": "894541307925/terraform-aws-three-tier-elb-app-sg",
            "source_security_group_id": "sg-0b06590c4985d362c",
            "subnets": [
              "subnet-039978327dddfa2c0",
              "subnet-09f0d78230bfca46c",
              "subnet-0df423cdd1dd7f633"
            ],
            "tags": {
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-elb-app"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb_app",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb_web.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:894541307925:loadbalancer/terraform-aws-three-tier-elb-web",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-aws-three-tier-elb-web-1243852932.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 20,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-aws-three-tier-elb-web",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "HTTP",
                "lb_port": 80,
                "lb_protocol": "HTTP"
              }
            ],
            "name": "terraform-aws-three-tier-elb-web",
            "security_groups": [
              "sg-056c5de2b925f9153"
            ],
            "source_security_group": "894541307925/terraform-aws-three-tier-elb-web-sg",
            "source_security_group_id": "sg-056c5de2b925f9153",
            "subnets": [
              "subnet-05b6c3fa5e6b86f6e",
              "subnet-0a37ed8599a104889",
              "subnet-0b56bb994ee218d42"
            ],
            "tags": {
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-elb-web"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb_web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0eb4d0318a5126c6c",
            "public_dns": "ec2-3-133-203-221.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.203.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-us-east-2a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0924f768250fc8328",
            "public_dns": "ec2-3-22-122-181.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.122.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-us-east-2b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-037095a91089f131a",
            "public_dns": "ec2-3-137-118-202.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.118.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-us-east-2c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:internet-gateway/igw-0d953e68b20afa616",
            "id": "igw-0d953e68b20afa616",
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb4d0318a5126c6c",
            "id": "nat-0c0ffe3df0b400ead",
            "network_interface_id": "eni-0ceabff8173d023b4",
            "private_ip": "10.7.1.145",
            "public_ip": "3.133.203.221",
            "subnet_id": "subnet-05b6c3fa5e6b86f6e",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0924f768250fc8328",
            "id": "nat-0a6a185553ed95350",
            "network_interface_id": "eni-0a742b0c79c5a6b84",
            "private_ip": "10.7.2.226",
            "public_ip": "3.22.122.181",
            "subnet_id": "subnet-0a37ed8599a104889",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-us-east-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037095a91089f131a",
            "id": "nat-0e715b6dc3b9a51c1",
            "network_interface_id": "eni-08e043a4446b50ab8",
            "private_ip": "10.7.3.22",
            "public_ip": "3.137.118.202",
            "subnet_id": "subnet-0b56bb994ee218d42",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-us-east-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039956c3e6d16b6861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0c0ffe3df0b400ead",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039956c3e6d16b686",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-015cca63d7b34c3fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a6a185553ed95350",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015cca63d7b34c3fd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b8ffb939e0fd4c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e715b6dc3b9a51c1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b8ffb939e0fd4c5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d953e68b20afa616",
            "id": "r-rtb-0576f0d9763c531df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0576f0d9763c531df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-039956c3e6d16b686",
            "owner_id": "894541307925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-015cca63d7b34c3fd",
            "owner_id": "894541307925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b8ffb939e0fd4c5",
            "owner_id": "894541307925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-private-us-east-2c"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0576f0d9763c531df",
            "owner_id": "894541307925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-public"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019afdc371c252080",
            "route_table_id": "rtb-039956c3e6d16b686",
            "subnet_id": "subnet-081eae12c0f702de0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b2d0f13fce043d9",
            "route_table_id": "rtb-015cca63d7b34c3fd",
            "subnet_id": "subnet-02eaba4a372ca0f93"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88a341f7ffc5a64",
            "route_table_id": "rtb-02b8ffb939e0fd4c5",
            "subnet_id": "subnet-07ad33c5b54f9e12e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f2f9980b0d88cd3",
            "route_table_id": "rtb-039956c3e6d16b686",
            "subnet_id": "subnet-039978327dddfa2c0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba622bcc45577f50",
            "route_table_id": "rtb-015cca63d7b34c3fd",
            "subnet_id": "subnet-09f0d78230bfca46c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a44f44991a035168",
            "route_table_id": "rtb-02b8ffb939e0fd4c5",
            "subnet_id": "subnet-0df423cdd1dd7f633"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c226e1a9c45164ba",
            "route_table_id": "rtb-0576f0d9763c531df",
            "subnet_id": "subnet-05b6c3fa5e6b86f6e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f9000f1c6fb6ba",
            "route_table_id": "rtb-0576f0d9763c531df",
            "subnet_id": "subnet-0a37ed8599a104889"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aa3e1f63d1bb71d",
            "route_table_id": "rtb-0576f0d9763c531df",
            "subnet_id": "subnet-0b56bb994ee218d42"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-081eae12c0f702de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.7.21.0/24",
            "id": "subnet-081eae12c0f702de0",
            "map_public_ip_on_launch": false,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-db-us-east-2a"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-02eaba4a372ca0f93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.7.22.0/24",
            "id": "subnet-02eaba4a372ca0f93",
            "map_public_ip_on_launch": false,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-db-us-east-2b"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-07ad33c5b54f9e12e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.7.23.0/24",
            "id": "subnet-07ad33c5b54f9e12e",
            "map_public_ip_on_launch": false,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-db-us-east-2c"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-039978327dddfa2c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.7.11.0/24",
            "id": "subnet-039978327dddfa2c0",
            "map_public_ip_on_launch": false,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-09f0d78230bfca46c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.7.12.0/24",
            "id": "subnet-09f0d78230bfca46c",
            "map_public_ip_on_launch": false,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-0df423cdd1dd7f633",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.7.13.0/24",
            "id": "subnet-0df423cdd1dd7f633",
            "map_public_ip_on_launch": false,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-private-us-east-2c"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-05b6c3fa5e6b86f6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.7.1.0/24",
            "id": "subnet-05b6c3fa5e6b86f6e",
            "map_public_ip_on_launch": true,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-0a37ed8599a104889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.7.2.0/24",
            "id": "subnet-0a37ed8599a104889",
            "map_public_ip_on_launch": true,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-public-us-east-2b"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:subnet/subnet-0b56bb994ee218d42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.7.3.0/24",
            "id": "subnet-0b56bb994ee218d42",
            "map_public_ip_on_launch": true,
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc-public-us-east-2c"
            },
            "vpc_id": "vpc-0959d8fc43730208d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:894541307925:vpc/vpc-0959d8fc43730208d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-07cac3ef52733d49d",
            "default_route_table_id": "rtb-094402c7e76d8bdbd",
            "default_security_group_id": "sg-09dadae2fe5d137ed",
            "dhcp_options_id": "dopt-c622a2ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0959d8fc43730208d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094402c7e76d8bdbd",
            "owner_id": "894541307925",
            "tags": {
              "Environment": "dev",
              "Group": "terraform-aws-three-tier",
              "Name": "terraform-aws-three-tier-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}